--- a/README
+++ b/README
@@ -8,6 +8,8 @@ our real working history.
 
 To recreate the gitorial from this patchset:
 
+    git clone git://github.com/Hobo/agility-gitorial-patches.git
+    cd agility-gitorial-patches
     mkdir agility-gitorial
     cd agility-gitorial
     git init
@@ -37,8 +39,8 @@ And then switch to the next stage with
     stg push
 
 Navigate through the tutorial by using `stg push`, `stg pop` and `stg
-goto`.  Other useful commands are `stg help`, `stg series`, and `stg
-edit`.
+goto`.  Other useful commands are `stg help`, `stg series`, `stg
+edit` (edit the comment) and `stg refresh` (edit the commit).
 
 Once you have completed the gitorial, you can export any changes:
 
@@ -46,6 +48,10 @@ Once you have completed the gitorial, you can export any changes:
 
 Note that you may have to use version 1.6 of git.  Versions 1.7 and
 later choke on empty patches.
+
+If you are using an updated version of git, here's a workaround to export patch by patch:
+
+    stg export -d .. 30-story-status-belongs-to-story.patch
 
 Please send your changes to [me](mailto:bryan@larsen.st) so I can
 update the gitorial for everybody!
