--- a/README
+++ b/README
@@ -19,9 +19,6 @@ To recreate the gitorial from this patchset:
     stg init
     stg import -i --reject -s ../series
 
-You may have to issue that last command repeatedly because stg import
-chokes on empty patches.
-
 Then load the plugins:
 
     git submodule update --init
@@ -44,12 +41,9 @@ edit` (edit the comment) and `stg refresh` (edit the commit).
 
 Once you have completed the gitorial, you can export any changes:
 
-    stg export -n -epatch -d ..
+    stg export -d ..
 
-Note that you may have to use version 1.6 of git.  Versions 1.7 and
-later choke on empty patches.
-
-If you are using an updated version of git, here's a workaround to export patch by patch:
+If git chokes on a commit, here's a workaround to export patch by patch:
 
     stg export -d .. 30-story-status-belongs-to-story.patch
 
